--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -31,7 +31,7 @@ The modification process proposed would be by inserting an extra step between po
 2. Append the Tx Hash of ```Netc``` : ```M_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d), T_Netc)``` 
 2. The Keccak Hash is than calculated: ```h(T)=KEC(M_s(T))```
 3. The signature process then generates: ```(T_w, T_r, T_s)=ECDSASIGN(h(T),p_r)```, where ```p_r``` is the senders private key.
-4. We can then define the sender function S (giving the sender's address) of the transaction as: ```S(T)=B_(96...255) (KEC(ECDSARECOVER(h(T), T_w, T_r, T_s)))
+4. We can then define the sender function S (giving the sender's address) of the transaction as: ```S(T)=B_(96...255) (KEC(ECDSARECOVER(h(T), T_w, T_r, T_s)))```
 
 In this way no extra information needs to be added to the transactions, the transaction structures would remain backwards compatible and all key symbolic fields would remain unchanged.
 
