--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -23,7 +23,7 @@ The current signing process is as follows:
 1. The message to be signed is constructed: ```L_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d))``` where ```T_i``` contains the EVM code if ```T_t=null``` or ```T_d``` is an unlimited size byte array if ```T_t<>null```
 2. The Keccak Hash is than calculated: ```h(T)=KEC(L_s(T))
 3. The signature process then generates: ```(T_w, T_r, T_s)=ECDSASIGN(h(T),p_r)```, where ```p_r``` is the senders private key.
-4. We can then define the sender function S (giving the sender's address) of the transaction as: ```S(T)=B_(96...255) (KEC(ECDSARECOVER(h(T), T_w, T_r, T_s)))
+4. We can then define the sender function S (giving the sender's address) of the transaction as: ```S(T)=B_(96...255) (KEC(ECDSARECOVER(h(T), T_w, T_r, T_s)))```
 
 The modification process proposed would be by inserting an extra step between points 1 and 2, which appends an arbitrary value to the transaction. However, unlike in BTC, where the value is taken from the source transatcion, the suggestion here is to utilse a constant value e.g. the transaction hash of block ``Netc = 1920000``` (which contained the execution of an irregular state change in the ETH chain). In this way the process would then become:
 
