--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -8,15 +8,15 @@
     Created: 2016-10-02
 
 ### Abstract
-This ECIP describes the process of modifiying the ETC hash process used for signing and validating transactions for inclusion into the ETC blockchain, where the proposed approach is akin to the BTC process.
+This ECIP describes the process of modifiying the ETC process used for signing and validating transactions for inclusion into the ETC blockchain. The proposed approach is akin to the BTC signing process, and will ensure Ethereum Hard Fork Chain (ETH) transctions can not be replayed on the ETC network.
 
 ### Motivation
-Other methods proposed for the replay fix require either modification of key symbolic values (i.e. the account nonce) or increasing the transaction sizes by adding an extra field to the transactions (e.g. a reference block hash). Such modifications impact backward compatibility of transaction structures. With the approach prosed here there is no change in the structure of the transaction, however there would be a minimal modification for the transaction signing and validation process. This difference would take the form of adding an extra arbitray value to the transaction prior to performing the hash. This would result in a unique message and thus signature that would differ from that of the ETH chain. Such processes will be cryptographically secure, and ensure that all transactions broadcast from the ETH network cannot be accepted in the ETC network and vice-versa.
+Other methods proposed for the Replay Attack fix require either modification of key symbolic values (e.g. the account nonce, which represents the number of transactions sent from the sender's address) or increasing the transaction sizes by adding an extra field to the sent transaction (e.g. an arbitrary reference block hash). Such modifications would impact backward compatibility of transaction structures. With the approach prosed here there is no change in the structure of the transaction and or the intrinsic values, however there would be a modification for to transaction signing and validation process. This difference would take the form of adding an extra arbitray value to the transaction prior to performing the transaction hash for signing. This would result in a unique message and thus signature that would differ from that of the ETH chain. Such a process will be cryptographically secure and ensure that all transactions broadcast from the ETH network cannot be accepted in the ETC network and vice-versa.
 
 ### Specification
-In the Bitcoin protocol the scriptPubKey script is copied from the source transaction into the spending transaction (i.e. the transaction that is being signed) before calculating the signature. Then the signature script, scriptSig, is embedded in the transaction. Using the previous transaction's scriptPubKey during signing is for historical reasons rather than any logical reason.
+In the Bitcoin protocol the scriptPubKey script is copied from the source transaction into the spending transaction (i.e. the transaction that is being signed) before calculating the signature. Then the signature script, scriptSig, is embedded in the transaction. Using the previous transaction's scriptPubKey during the signing process is for historical reasons rather than any logical ones.
 
-In the ethereum protocol a transaction (formally, ```T```) is a single cryptographically-signed instruction constructed by an actor externally to the scope of Ethereum. Both, message call and contract creation transatcions, specify a number of common felds: ```T=(T_n, T_p, T_g, T_t, T_v, T_(i or d),T_w, T_r, T_s)```,  where ```T_w, T_r, T_s``` are the signature components for the elliptic curve digital signature algorithem utilised in the Ethereum protocol.
+In the ethereum protocol a transaction (formally ```T```) is a single cryptographically-signed instruction constructed by an actor externally to the scope of the Ethereum network. Both message call and contract creation transactions specify a number of common felds: ```T=(T_n, T_p, T_g, T_t, T_v, T_(i or d),T_w, T_r, T_s)```,  where ```T_w, T_r, T_s``` are the signature components for the elliptic curve digital signature algorithem utilised in the Ethereum protocol.
 
 The current signing process is as follows:
 
