--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -20,21 +20,22 @@ In the ethereum protocol a transaction (formally ```T```) is a single cryptograp
 
 The current signing process is as follows:
 
-1. The message to be signed is constructed: ```L_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d))``` where ```T_i``` contains the EVM code if ```T_t=null``` or ```T_d``` is an unlimited size byte array if ```T_t<>null```
-2. The Keccak Hash is than calculated: ```h(T)=KEC(L_s(T))
+1. The message to be signed is constructed: ```L_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d))``` where ```T_i``` contains the EVM code if ```T_t=null``` (no target address) or ```T_d``` is an unlimited size byte array if ```T_t<>null``` (has target address)
+2. The Keccak Hash is than calculated: ```h(T)=KEC(L_s(T))```
 3. The signature process then generates: ```(T_w, T_r, T_s)=ECDSASIGN(h(T),p_r)```, where ```p_r``` is the senders private key.
-4. We can then define the sender function S (giving the sender's address) of the transaction as: ```S(T)=B_(96...255) (KEC(ECDSARECOVER(h(T), T_w, T_r, T_s)))```
+4. We can then define the sender function S (giving the sender's address) for the transaction as: 
+```S(T)=B_(96...255) (KEC(ECDSARECOVER(h(T), T_w, T_r, T_s)))```
 
-The modification process proposed would be by inserting an extra step between points 1 and 2, which appends an arbitrary value to the transaction. However, unlike in BTC, where the value is taken from the source transatcion, the suggestion here is to utilse a constant value e.g. the transaction hash of block ``Netc = 1920000``` (which contained the execution of an irregular state change in the ETH chain). In this way the process would then become:
+The modified process proposed would be to insert an extra step between points 1 and 2, which appends an arbitrary value to the transaction. However, unlike in BTC where the value is taken from the source transatcion the suggestion in this approach is to utilse a constant value e.g. the transaction hash of block ```Netc = 1920000``` (which contained the execution of an irregular state change in the ETH chain). In this way the process would then become:
 
-1. The message to be signed is constructed: ```L_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d))``` where ```T_i``` contains the EVM code if ```T_t=null``` or ```T_d``` is an unlimited size byte array if ```T_t<>null```
+1. The message to be signed is constructed as before: ```L_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d))```
 2. Append the Tx Hash of ```Netc``` : ```M_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d), T_Netc)``` 
-2. The Keccak Hash is than calculated: ```h(T)=KEC(M_s(T))```
-3. The signature process then generates: ```(T_w, T_r, T_s)=ECDSASIGN(h(T),p_r)```, where ```p_r``` is the senders private key.
-4. We can then define the sender function S (giving the sender's address) of the transaction as: ```S(T)=B_(96...255) (KEC(ECDSARECOVER(h(T), T_w, T_r, T_s)))```
+3. The Keccak Hash is than calculated: ```h(T)=KEC(M_s(T))```
+4. The signature process then generates: ```(T_w, T_r, T_s)=ECDSASIGN(h(T),p_r)```
+5. We can then define the sender function S (giving the sender's address) for the transaction as: ```S(T)=B_(96...255) (KEC(ECDSARECOVER(h(T), T_w, T_r, T_s)))```
 
-In this way no extra information needs to be added to the transactions, the transaction structures would remain backwards compatible and all key symbolic fields would remain unchanged.
+In this way no extra information needs to be added to the transactions to increase their size, the transaction structures would remain backwards compatible and all key symbolic fields would remain unchanged.
 
-Even though this is a much simpler change for implmentation compared to other suggestions and does not require changes to the standard transaction structures, this does require a change in a fundamental process related to the Ethereum Classic protocol. As a result it is a higher risk change and would require much deeper testing to ensure transactions are not lost by users.
+Even though this is a much simpler change for implmentation compared to other suggestions and does not require changes to the standard transaction structures, this does require a change in the fundamental process related to the Ethereum Classic protocol. As a result it is a higher risk change and would require much deeper testing to ensure transactions are not lose through errors in the signing process.
 
 The trigger block is expected to be at ```3000000```, which is the HardForking block for delaying the Difficulty Bomb. 
