--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -38,4 +38,4 @@ In this way no extra information needs to be added to the transactions to increa
 
 Even though this is a much simpler change for implmentation compared to other suggestions and does not require changes to the standard transaction structures, this does require a change in the fundamental process related to the Ethereum Classic protocol. As a result it is a higher risk change and would require much deeper testing to ensure transactions are not lose through errors in the signing process.
 
-The trigger block is expected to be at ```3000000```, which is the HardForking block for delaying the Difficulty Bomb. 
+The trigger block is expected to be at ```Netc_trigger=3,000,000```, which is the HardForking block for delaying the Difficulty Bomb.
