--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -26,10 +26,10 @@ The current signing process is as follows:
 4. We can then define the sender function S (giving the sender's address) for the transaction as: 
 ```S(T)=B_(96...255) (KEC(ECDSARECOVER(h(T), T_w, T_r, T_s)))```
 
-The modified process proposed would be to insert an extra step between points 1 and 2, which appends an arbitrary value to the transaction. However, unlike in BTC where the value is taken from the source transatcion the suggestion in this approach is to utilse a constant value e.g. the transaction hash of block ```Netc = 1920000``` (which contained the execution of an irregular state change in the ETH chain). In this way the process would then become:
+The modified process proposed would be to insert an extra step between points 1 and 2, which appends an arbitrary value, T_a, to the transaction. However, unlike in BTC where the value is taken from the source transatcion the suggestion in this approach is to utilse a constant value e.g. the transactions hash of block ```Netc = 1920000``` i.e. ```T_a = H_e``` (which contained the execution of an irregular state change in the ETH chain). In this way the process would then become:
 
 1. The message to be signed is constructed as before: ```L_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d))```
-2. Append the Tx Hash of ```Netc``` : ```M_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d), T_Netc)``` 
+2. Append the Tx Hash of ```Netc``` i.e. given by ```T_a``` : ```M_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d), T_a)``` 
 3. The Keccak Hash is than calculated: ```h(T)=KEC(M_s(T))```
 4. The signature process then generates: ```(T_w, T_r, T_s)=ECDSASIGN(h(T),p_r)```
 5. We can then define the sender function S (giving the sender's address) for the transaction as: ```S(T)=B_(96...255) (KEC(ECDSARECOVER(h(T), T_w, T_r, T_s)))```
@@ -39,3 +39,6 @@ In this way no extra information needs to be added to the transactions to increa
 Even though this is a much simpler change for implmentation compared to other suggestions and does not require changes to the standard transaction structures, this does require a change in the fundamental process related to the Ethereum Classic protocol. As a result it is a higher risk change and would require much deeper testing to ensure transactions are not lose through errors in the signing process.
 
 The trigger block is expected to be at ```Netc_trigger=3,000,000```, which is the HardForking block for delaying the Difficulty Bomb.
+
+### Alternative For Discussion
+The arbitrary value above e.g. the transactions hash of block ```Netc = 1920000``, ```T_a```, was chosen due to simplicity. This value can be easily updated in future forks, by using a new reference block, and this process can also be easily managed by light clients. However, an alternative method would be to utilise a dynamic value for ```T_a```. One possibilty would be to use the transactions hash of a reference block that gets updated after a lead time of ```N_lead``` blocks. So In the first "epoch" you would use the ```T_a=H_e(Netc)```, and after ```N_lead``` blocks you have ```T_a=H_e(Netc+N_lead)```. This way would ensure the replay attack is resolved after a time lag of ```N_lead``` (or one epoch). This would mean that in any future fork replay issues will be resolved after one epoch. 
