--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -8,15 +8,15 @@
     Created: 2016-10-02
 
 ### Abstract
-This ECIP describes the process of modifiying the ETC process used for signing and validating transactions for inclusion into the ETC blockchain. The proposed approach is akin to the BTC signing process, and will ensure Ethereum Hard Fork Chain (ETH) transctions can not be replayed on the ETC network.
+This ECIP describes the process of modifying the ETC process used for signing and validating transactions for inclusion into the ETC blockchain. The proposed approach is akin to the BTC signing process, and will ensure Ethereum Hard Fork Chain (ETH) transactions can not be replayed on the ETC network.
 
 ### Motivation
-Other methods proposed for the Replay Attack fix require either modification of key symbolic values (e.g. the account nonce, which represents the number of transactions sent from the sender's address) or increasing the transaction sizes by adding an extra field to the sent transaction (e.g. an arbitrary reference block hash). Such modifications would impact backward compatibility of transaction structures. With the approach prosed here there is no change in the structure of the transaction and or the intrinsic values, however there would be a modification for to transaction signing and validation process. This difference would take the form of adding an extra arbitray value to the transaction prior to performing the transaction hash for signing. This would result in a unique message and thus signature that would differ from that of the ETH chain. Such a process will be cryptographically secure and ensure that all transactions broadcast from the ETH network cannot be accepted in the ETC network and vice-versa.
+Other methods proposed for the Replay Attack fix require either modification of key symbolic values (e.g. the account nonce, which represents the number of transactions sent from the sender's address) or increasing the transaction sizes by adding an extra field to the sent transaction (e.g. an arbitrary reference block hash). Such modifications would impact backward compatibility of transaction structures. With the approach prosed here there is no change in the structure of the transaction and or the intrinsic values, however there would be a modification for to transaction signing and validation process. This difference would take the form of adding an extra arbitrary value to the transaction prior to performing the transaction hash for signing. This would result in a unique message and thus signature that would differ from that of the ETH chain. Such a process will be cryptographically secure and ensure that all transactions broadcast from the ETH network cannot be accepted in the ETC network and vice-versa.
 
 ### Specification
 In the Bitcoin protocol the scriptPubKey script is copied from the source transaction into the spending transaction (i.e. the transaction that is being signed) before calculating the signature. Then the signature script, scriptSig, is embedded in the transaction. Using the previous transaction's scriptPubKey during the signing process is for historical reasons rather than any logical ones.
 
-In the ethereum protocol a transaction (formally ```T```) is a single cryptographically-signed instruction constructed by an actor externally to the scope of the Ethereum network. Both message call and contract creation transactions specify a number of common felds: ```T=(T_n, T_p, T_g, T_t, T_v, T_(i or d),T_w, T_r, T_s)```,  where ```T_w, T_r, T_s``` are the signature components for the elliptic curve digital signature algorithem utilised in the Ethereum protocol.
+In the Ethereum protocol a transaction (formally ```T```) is a single cryptographically-signed instruction constructed by an actor externally to the scope of the Ethereum network. Both message call and contract creation transactions specify a number of common felds: ```T=(T_n, T_p, T_g, T_t, T_v, T_(i or d),T_w, T_r, T_s)```,  where ```T_w, T_r, T_s``` are the signature components for the elliptic curve digital signature algorithm utilized in the Ethereum protocol.
 
 The current signing process is as follows:
 
@@ -26,7 +26,7 @@ The current signing process is as follows:
 4. We can then define the sender function S (giving the sender's address) for the transaction as: 
 ```S(T)=B_(96...255) (KEC(ECDSARECOVER(h(T), T_w, T_r, T_s)))```
 
-The modified process proposed would be to insert an extra step between points 1 and 2, which appends an arbitrary value, T_a, to the transaction. However, unlike in BTC where the value is taken from the source transatcion the suggestion in this approach is to utilse a constant value e.g. the transactions hash of block ```Netc = 1920000``` i.e. ```T_a = H_e``` (which contained the execution of an irregular state change in the ETH chain). In this way the process would then become:
+The modified process proposed would be to insert an extra step between points 1 and 2, which appends an arbitrary value, T_a, to the transaction. However, unlike in BTC where the value is taken from the source transaction the suggestion in this approach is to utilse a constant value e.g. the transactions hash of block ```Netc = 1920000``` i.e. ```T_a = H_e``` (which contained the execution of an irregular state change in the ETH chain). In this way the process would then become:
 
 1. The message to be signed is constructed as before: ```L_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d))```
 2. Append the Tx Hash of ```Netc``` i.e. given by ```T_a``` : ```M_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d), T_a)``` 
@@ -36,9 +36,9 @@ The modified process proposed would be to insert an extra step between points 1 
 
 In this way no extra information needs to be added to the transactions to increase their size, the transaction structures would remain backwards compatible and all key symbolic fields would remain unchanged.
 
-Even though this is a much simpler change for implmentation compared to other suggestions and does not require changes to the standard transaction structures, this does require a change in the fundamental process related to the Ethereum Classic protocol. As a result it is a higher risk change and would require much deeper testing to ensure transactions are not lose through errors in the signing process.
+Even though this is a much simpler change for implementation compared to other suggestions and does not require changes to the standard transaction structures, this does require a change in the fundamental process related to the Ethereum Classic protocol. As a result it is a higher risk change and would require much deeper testing to ensure transactions are not lose through errors in the signing process.
 
-The trigger block is expected to be at ```Netc_trigger=3,000,000```, which is the HardForking block for delaying the Difficulty Bomb.
+The trigger block is expected to be at ```Netc_trigger=3,000,000```, which is the Hard Forking block for delaying the Difficulty Bomb.
 
 ### Alternative For Discussion
-The arbitrary value above e.g. the transactions hash of block ```Netc = 1920000``, ```T_a```, was chosen due to simplicity. This value can be easily updated in future forks, by using a new reference block, and this process can also be easily managed by light clients. However, an alternative method would be to utilise a dynamic value for ```T_a```. One possibilty would be to use the transactions hash of a reference block that gets updated after a lead time of ```N_lead``` blocks. So In the first "epoch" you would use the ```T_a=H_e(Netc)```, and after ```N_lead``` blocks you have ```T_a=H_e(Netc+N_lead)```. This way would ensure the replay attack is resolved after a time lag of ```N_lead``` (or one epoch). This would mean that in any future fork replay issues will be resolved after one epoch. 
+The arbitrary value above e.g. the transactions hash of block ```Netc = 1920000```, ```T_a```, was chosen due to simplicity. This value can be easily updated in future forks by using a new reference block. This process can also be easily managed by light clients, even with end users making an update to the reference bloc (if the option is made available). However, an alternative method would be to utilize a dynamic value for ```T_a```. One possibility would be to use the transactions hash of a reference block that gets updated after a lead time of ```N_lead``` blocks. So In the first "epoch" you would use the ```T_a=H_e(Netc)```, and after ```N_lead``` blocks you have ```T_a=H_e(Netc+N_lead)```. This way would ensure the replay attack is resolved after a time lag of ```N_lead``` (or one epoch). This would imply that in any future fork replay issues will be resolved after one epoch, as transactions hash, ```H_e``` in the headers of forks would vary immediately as different transactions start taking place.
