--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -41,4 +41,6 @@ Even though this is a much simpler change for implementation compared to other s
 The trigger block is expected to be at ```Netc_trigger=3,000,000```, which is the Hard Forking block for delaying the Difficulty Bomb.
 
 ### Alternative For Discussion
-The arbitrary value above e.g. the transactions hash of block ```Netc = 1920000```, ```T_a```, was chosen due to simplicity. This value can be easily updated in future forks by using a new reference block. This process can also be easily managed by light clients, even with end users making an update to the reference bloc (if the option is made available). However, an alternative method would be to utilize a dynamic value for ```T_a```. One possibility would be to use the transactions hash of a reference block that gets updated after a lead time of ```N_lead``` blocks. So In the first "epoch" you would use the ```T_a=H_e(Netc)```, and after ```N_lead``` blocks you have ```T_a=H_e(Netc+N_lead)```. This way would ensure the replay attack is resolved after a time lag of ```N_lead``` (or one epoch). This would imply that in any future fork replay issues will be resolved after one epoch, as transactions hash, ```H_e``` in the headers of forks would vary immediately as different transactions start taking place.
+The arbitrary value above e.g. the transactions hash of block ```Netc = 1920000```, ```T_a```, was chosen due to simplicity. This value can be easily updated in future forks by using a new reference block. This process can also be easily managed by light clients, even with end users making an update to the reference block (if the option is made available). 
+
+An alternative method would be to utilize a dynamic value for ```T_a```. One possibility would be to use the transactions hash of a reference block that gets updated after a lead time of ```N_lead``` blocks. So in the first "epoch" you would use ```T_a=H_e(Netc)```, and after ```N_lead``` blocks you have ```T_a=H_e(Netc+N_lead)```. This way you would ensure the replay attack is resolved after a time lag of ```N_lead``` (or one epoch). This would imply that in any future fork replay issues will be resolved after one epoch, as the Transactions Hash field, ```H_e``` in the blockheaders of forks would vary immediately as different transactions start taking place.
