--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -11,7 +11,7 @@
 This ECIP describes the process of modifying the ETC process used for signing and validating transactions for inclusion into the ETC blockchain. The proposed approach is akin to the BTC signing process, and will ensure Ethereum Hard Fork Chain (ETH) transactions can not be replayed on the ETC network.
 
 ### Motivation
-Other methods proposed for the Replay Attack fix require either modification of key symbolic values (e.g. the account nonce, which represents the number of transactions sent from the sender's address) or increasing the transaction sizes by adding an extra field to the sent transaction (e.g. an arbitrary reference block hash). Such modifications would impact backward compatibility of transaction structures. With the approach proposed here there is no change in the structure of the transaction and or the intrinsic values, however there would be a modification for to transaction signing and validation process. This difference would take the form of adding an extra arbitrary value to the transaction prior to performing the transaction hash for signing. This would result in a unique message and thus signature that would differ from that of the ETH chain. Such a process will be cryptographically secure and ensure that all transactions broadcast from the ETH network cannot be accepted in the ETC network and vice-versa.
+Other methods proposed for the Replay Attack fix require either modification of key symbolic values (e.g. the account nonce, which represents the number of transactions sent from the sender's address) or increasing the transaction sizes by adding an extra field to the sent transaction (e.g. an arbitrary reference block hash). Such modifications would impact backward compatibility of transaction structures. With the approach proposed here there is no change in the structure of the transaction and or the intrinsic values, however there would be a modification to the transaction signing and validation process. This difference would take the form of adding an extra arbitrary value to the transaction prior to performing the transaction hash for signing. This would result in a unique message and thus signature that would differ from that of the ETH chain. Such a process will be cryptographically secure and ensure that all transactions broadcast from the ETH network cannot be accepted in the ETC network and vice-versa.
 
 ### Specification
 In the Bitcoin protocol the scriptPubKey script is copied from the source transaction into the spending transaction (i.e. the transaction that is being signed) before calculating the signature. Then the signature script, scriptSig, is embedded in the transaction. Using the previous transaction's scriptPubKey during the signing process is for historical reasons rather than any logical ones.
@@ -36,11 +36,11 @@ The modified process proposed would be to insert an extra step between points 1 
 
 In this way no extra information needs to be added to the transactions to increase their size, the transaction structures would remain backwards compatible and all key symbolic fields would remain unchanged.
 
-Even though this is a much simpler change for implementation compared to other suggestions and does not require changes to the standard transaction structures, this does require a change in the fundamental process related to the Ethereum Classic protocol. As a result it is a higher risk change and would require much deeper testing to ensure transactions are not lose through errors in the signing process.
+Even though this is a much simpler change for implementation compared to other suggestions and does not require changes to the standard transaction structures, this does require a change in the fundamental process related to the Ethereum Classic protocol. As a result it is a higher risk change and would require much deeper testing to ensure transactions are not lost through unforseen errors in the signing process.
 
 The trigger block is expected to be at ```Netc_trigger=3,000,000```, which is the Hard Forking block for delaying the Difficulty Bomb.
 
 ### Alternative For Discussion
-The arbitrary value above e.g. the transactions hash of block ```Netc = 1920000```, ```T_a```, was chosen due to simplicity. This value can be easily updated in future forks by using a new reference block. This process can also be easily managed by light clients, even with end users making an update to the reference block (if the option is made available). 
+The arbitrary value above e.g. the transactions hash of block ```Netc = 1920000``` or ```3,000,000``` for ```T_a```, are chosen due to simplicity. This value can be easily updated in future forks by using a new reference block. This process can also be easily managed by light clients, even with end users making an update to the reference block variable to match the relevant one chosen by the network (if the option is made available to end users). 
 
 An alternative method would be to utilize a dynamic value for ```T_a```. One possibility would be to use the transactions hash of a reference block that gets updated after a lead time of ```N_lead``` blocks. So in the first "epoch" you would use ```T_a=H_e(Netc)```, and after ```N_lead``` blocks you have ```T_a=H_e(Netc+N_lead)```. This way you would ensure the replay attack is resolved after a time lag of ```N_lead``` (or one epoch). This would imply that in any future fork replay issues will be resolved after one epoch, as the Transactions Hash field, ```H_e``` in the blockheaders of forks would vary immediately as different transactions start taking place.
