--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -26,7 +26,7 @@ The current signing process is as follows:
 4. We can then define the sender function S (giving the sender's address) for the transaction as: 
 ```S(T)=B_(96...255) (KEC(ECDSARECOVER(h(T), T_w, T_r, T_s)))```
 
-The modified process proposed would be to insert an extra step between points 1 and 2, which appends an arbitrary value, T_a, to the transaction. However, unlike in BTC where the value is taken from the source transaction the suggestion in this approach is to utilse a constant value e.g. the transactions hash of block ```Netc = 1920000``` i.e. ```T_a = H_e``` (which contained the execution of an irregular state change in the ETH chain). In this way the process would then become:
+The modified process proposed would be to insert an extra step between points 1 and 2, which appends an arbitrary value, T_a, to the transaction prior to signing and or validating. However, unlike in BTC where the value is taken from the source transaction the suggestion in this approach is to utilse a block header hash i.e. ```T_a = Block Header Hash```. So the process becomes:
 
 1. The message to be signed is constructed as before: ```L_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d))```
 2. Append the Tx Hash of ```Netc``` i.e. given by ```T_a``` : ```M_s(T)=(T_n, T_p, T_g, T_t, T_v, T_(i or d), T_a)``` 
@@ -38,9 +38,18 @@ In this way no extra information needs to be added to the transactions to increa
 
 Even though this is a much simpler change for implementation compared to other suggestions and does not require changes to the standard transaction structures, this does require a change in the fundamental process related to the Ethereum Classic protocol. As a result it is a higher risk change and would require much deeper testing to ensure transactions are not lost through unforseen errors in the signing process.
 
-The trigger block is expected to be at ```Netc_trigger=3,000,000```, which is the Hard Forking block for delaying the Difficulty Bomb.
+The trigger block is expected to be at ```Netc=3,000,000```, which is the Hard Forking block for delaying the Difficulty Bomb.
 
-### Alternative For Discussion
-The arbitrary value above e.g. the transactions hash of block ```Netc = 1920000``` or ```3,000,000``` for ```T_a```, are chosen due to simplicity. This value can be easily updated in future forks by using a new reference block. This process can also be easily managed by light clients, even with end users making an update to the reference block variable to match the relevant one chosen by the network (if the option is made available to end users). 
+### Fixed and Dynamic Variable Netc
+The value of T_a can be chosen in an arbitrary way if it is constanct e.g. the block header hash of a specific block can be shosen for simplicity to be ```Netc = 1920000``` (the point of the ethereum fork) or ```3,000,000``` (as noted above). This value can be easily updated in future forks by using a new reference block. This process can also be easily managed by light clients, even with end users making an update to the reference block variable to match the relevant one chosen by the network (if the option is made available to end users). 
 
-An alternative method would be to utilize a dynamic value for ```T_a```. One possibility would be to use the transactions hash of a reference block that gets updated after a lead time of ```N_lead``` blocks. So in the first "epoch" you would use ```T_a=H_e(Netc)```, and after ```N_lead``` blocks you have ```T_a=H_e(Netc+N_lead)```. This way you would ensure the replay attack is resolved after a time lag of ```N_lead``` (or one epoch). This would imply that in any future fork replay issues will be resolved after one epoch, as the Transactions Hash field, ```H_e``` in the blockheaders of forks would vary immediately as different transactions start taking place.
+An alternative method would be to utilize a dynamic value for ```T_a```. One possibility would be to use the block header hash of a reference block that is updated after a lead time of ```T_lead``` or after ```N_lead blocks```. If we say ```1 epoch``` is ```1024 blocks``` or ```4 hours```, then we can use a lead time of ```6 epochs``` or ```6,144 blocks``` or ```24 hours```
+
+1. At time ```t_0``` we are at block number ```N_t0```. We use block from ```6 epochs``` back which equals ```N_e=6,144 bock``` 
+2. Block header hash of relevant reference point block:  ```BlockHEaderHash(N_t0 - N_e) = T_a```
+3. Use ```T_a``` as the reference value in above signing and validation method
+4. Validation can then take place with up to 1 weeks of values : ```t_0, t0-24, t_0-48 ... t_0-168```, which implies at most 7 checks would need to be performed for transactions that would be delayed by 7 days.  
+
+With this approach, it would ensure that for any future forks the replay attack is resolved after a time lag of ```6 epochss``` (or 24 hours ```~ 6,144 blocks```).
+
+In this dyanamic approach, an option could be used that T_a could also be an arbitrary value ```0```, which can be used by light clients or for constructing off-line transactions.
