--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -40,7 +40,7 @@ Even though this is a much simpler change for implementation compared to other s
 
 The trigger block is expected to be at ```Netc=3,000,000```, which is the Hard Forking block for delaying the Difficulty Bomb.
 
-### Fixed and Dynamic Variable Netc
+### Fixed and Dynamic Variable Usage
 The value of T_a can be chosen in an arbitrary way if it is constanct e.g. the block header hash of a specific block can be shosen for simplicity to be ```Netc = 1920000``` (the point of the ethereum fork) or ```3,000,000``` (as noted above). This value can be easily updated in future forks by using a new reference block. This process can also be easily managed by light clients, even with end users making an update to the reference block variable to match the relevant one chosen by the network (if the option is made available to end users). 
 
 An alternative method would be to utilize a dynamic value for ```T_a```. One possibility would be to use the block header hash of a reference block that is updated after a lead time of ```T_lead``` or after ```N_lead blocks```. If we say ```1 epoch``` is ```1024 blocks``` or ```4 hours```, then we can use a lead time of ```6 epochs``` or ```6,144 blocks``` or ```24 hours```
