--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -45,10 +45,10 @@ The value of T_a can be chosen in an arbitrary way if it is constanct e.g. the b
 
 An alternative method would be to utilize a dynamic value for ```T_a```. One possibility would be to use the block header hash of a reference block that is updated after a lead time of ```T_lead``` or after ```N_lead blocks```. If we say ```1 epoch``` is ```1024 blocks``` or ```4 hours```, then we can use a lead time of ```6 epochs``` or ```6,144 blocks``` or ```24 hours```
 
-1. At time ```t_0``` we are at block number ```N_t0```. We use block from ```6 epochs``` back which equals ```N_e=6,144 bock``` 
+1. At time ```t0``` we are at block number ```N_t0```. We use block from ```6 epochs``` back which equals ```N_e=6,144 bock``` 
 2. Block header hash of relevant reference point block:  ```BlockHeaderHash(N_t0 - N_e) = T_a```
 3. Use ```T_a``` as the reference value in above signing and validation method
-4. Validation can then take place with up to 1 weeks of values: ```t_0, t0-24, t_0-48 ... t_0-168```, which implies at most 7 checks would need to be performed for transactions that would be delayed by 7 days.  
+4. Validation can then take place with up to 1 weeks of values: ```t0, t0-24, t0-48 ... t0-168```, which implies at most 7 checks would need to be performed for transactions that would be delayed by 7 days.  
 
 With this approach, it would ensure that for any future forks the replay attack is resolved after a time lag of ```6 epochss``` (or 24 hours ```~ 6,144 blocks```).
 
