--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -46,19 +46,25 @@ An alternative method would be to utilize a dynamic value for ```T_a```. One pos
 
 For example, starting at ```Netc = 3,000,000``` we update ```T_a``` with the new reference value after each ```N_l``` blocks. If ```BH(N)``` is the function for the block header hash for the ```Nth``` block, and we choose to reference a lagging block we have:
 
-```t0 : T_a = BH[Netc - N_l]```
-```t1 : T_a = BH[Netc - N_l + N_l]```
-```t2 : T_a = BH[Netc - N_l + N_l + N_l]```
-```...```
-```tn : T_a = BH[Netc - N_l + N_l * n]```
+```
+t0 : T_a = BH[Netc - N_l]
+t1 : T_a = BH[Netc - N_l + N_l]
+t2 : T_a = BH[Netc - N_l + N_l + N_l]
+...
+tn : T_a = BH[Netc - N_l + N_l * n]
+```
 
 or 
 
-```tn : T_a = BH[Netc + N_l * (n - 1)]```
+```
+tn : T_a = BH[Netc + N_l * (n - 1)]
+```
 
 where 
 
-```n = RoundDown[ (N_c - Netc)/N_l ]```
+```
+n = RoundDown[ (N_c - Netc)/N_l ]
+```
 
 ```N_c``` is the most recent block number.
 
