--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -68,7 +68,7 @@ n = RoundDown[ (N_c - Netc)/N_l ]
 
 ```N_c``` is the most recent block number.
 
-In this way validation can then take place using a pool of 1 weeks of values: ```t0, t1, t2 ... t7```, which implies at most 7 checks would need to be performed for transactions that are delayed by up to 7 days.  
+In this way validation can then take place using a pool of 1 week of values: ```t0, t1, t2 ... t7```, which implies at most 7 checks would be required to be performed for transactions that are delayed by up to 7 days. A limit should be in place to identify how far checks should go.
 
 This approach would ensure that for any future forks the replay attack is resolved after a time lag of ```6 epochs``` (or 24 hours ```~ 6,144 blocks```).
 
