--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -37,9 +37,14 @@ In this way no extra information needs to be added to the transactions to increa
 
 Even though this is a much simpler change for implementation compared to other suggestions and does not require changes to the standard transaction structures, this does require a change in the fundamental process related to the Ethereum Classic protocol. As a result it is a higher risk change and would require much deeper testing to ensure transactions are not lost through unforseen errors in the signing process.
 
-The trigger block is expected to be at ```Netc=3,000,000```, which is the Hard Forking block for delaying the Difficulty Bomb.
+The choice of signing variable will be a fixed value, but support for offline transactions using hardware wallets would also need to be included. Therefore the choice of the signing varibale can be: 
+1. 0 (null) to support offline transactions
+2. Block hash of the most recent fork, T_a, where T_a is the hash of the Genesis block if no forks have occurred.
 
-### Fixed and Dynamic Variable Usage
+For example the hash of block ```Netc=3,000,000```, which is exepcted to be the Hard Forking block for delaying the Difficulty Bomb.
+
+
+### Fixed and Dynamic Variable Usage (For Reference Only)
 The value of T_a can be chosen in an arbitrary way if it is constant e.g. the block header hash of a specific block can be chosen for simplicity to be ```Netc = 1920000``` (the point of the ethereum fork) or ```Netc = 3,000,000``` (as noted above). This value can be easily updated in future forks by using a new reference block. This process can also be easily managed by light clients, even with end users making an update to the reference block variable to match the relevant value chosen by the network (if the option is made available to end users). 
 
 An alternative method would be to utilize a dynamic value for ```T_a```. One possibility would be to use the block header hash of a reference block that is updated after a lead time of ```T_l``` or after ```N_l lead blocks```. If we say ```1 epoch``` is ```1024 blocks``` or ```4 hours```, then we can use a lead time of ```T_l = 6 epochs``` or ```N_l = 6,144 blocks```. Therefore the reference block is updated every ```24 hours``` (every ```6 epochs```). 
