--- a/ECIPs/ECIP1011.md
+++ b/ECIPs/ECIP1011.md
@@ -78,3 +78,5 @@ In this way validation can then take place using a pool of 1 week of values: ```
 This approach would ensure that for any future forks the replay attack is resolved after a time lag of ```6 epochs``` (or 24 hours ```~ 6,144 blocks```).
 
 In this dynamic approach, an option could be used where ```T_a``` is also an arbitrary value ```0``` that is used by light clients or for constructing off-line transactions. However, this means that light clients or offline transaction construction is suciptible to replay attacks. 
+
+The dynamic signing variable is only highlighted here for completeness and is not being considered for Replay Attack Fix due to potential concerns related to enforcing transaction expiry times at the protocol level and the added cost of computation required for long expiry times (validation period above).
